--- a/css/domino.css
+++ b/css/domino.css
@@ -1,5 +1,16 @@
 body{
   background-image: url(../img/Domino.jpg);
+
+  background-repeat: repeat;
+
+  }
+.title{
+  font-family: sans-serif;
+  font-size: 30px;
+  font-weight: bolder;
+  text-align: center;
+  margin: 0 auto;
+  background-color: #3367e0;
 }
 
 .player{
