change turn and verify movement but not at the same time

--- a/css/domino.css
+++ b/css/domino.css
@@ -63,6 +63,12 @@ body{
   background-color: grey;
 }
 
+#dominoesplayerone.hide, #dominoesplayertwo.hide{
+  visibility: hidden;
+  height: 40px;
+  background-color: grey;
+}
+
 .dominonumberclass{
   border: 2px;
   border-color: black;
