--- a/css/domino.css
+++ b/css/domino.css
@@ -1,9 +1,9 @@
 body{
   background-image: url(../img/Domino.jpg);
-
-  background-repeat: repeat;
+  background-size: cover;
 
   }
+
 .title{
   font-family: sans-serif;
   font-size: 30px;
