--- a/css/domino.css
+++ b/css/domino.css
@@ -50,12 +50,14 @@ body{
   padding-top: 20px;
   height: auto;
   width: 240px;
-  background-color: blue;
+  background-color: #2373ec;
 }
 
 
 .nameplayer{
   text-align: center;
+  font-size: 20px;
+  margin-bottom: 10px
 }
 
 #dominoesplayerone, #dominoesplayertwo{
@@ -97,4 +99,34 @@ body{
   margin: 0 auto;
   background-color: white;
   text-align: center;
+}
+.picknewdomino{
+  font-size: 20px;
+  font-weight: bold;
+  font-size-adjust: auto;
+}
+
+.startgame{
+  position: relative;
+  margin-left: 200px;
+  font-size: 20px;
+  color: black;
+  font-variant: small-caps;
+  background-color: #bf9090;
+}
+
+#gameover{
+  position: relative;
+  height: 50px;
+  width: 300px;
+  border: 2px solid #17212e;
+  background-color: #707fa0;
+  padding-left: 50px;
+  margin: 0 auto;
+  text-align: justify;
+  font-size: 30px;
+  font-weight: bolder;
+  color: #8bca12;
+
+
 }
