--- a/css/domino.css
+++ b/css/domino.css
@@ -115,15 +115,16 @@ body{
   background-color: #bf9090;
 }
 
-#gameover{
+#gamestate{
   position: relative;
-  height: 50px;
+  height: auto;
   width: 300px;
   border: 2px solid #17212e;
   background-color: #707fa0;
-  padding-left: 50px;
+  padding-left: 20px;
+  padding-right: 20px;
   margin: 0 auto;
-  text-align: justify;
+  text-align: center;
   font-size: 30px;
   font-weight: bolder;
   color: #8bca12;
