--- a/css/domino.css
+++ b/css/domino.css
@@ -39,6 +39,15 @@ body{
   background-color: white;
 }
 
+.cell-board.filled img{
+  position:absolute;
+  margin-left: -10px;
+  margin-top: 0px;
+  height: 20px;
+  width: 20px;
+  background-color: white;
+}
+
 .board {
   background-color: #E3D4AB;
 }
@@ -100,6 +109,8 @@ body{
   background-color: white;
   text-align: center;
 }
+
+
 .picknewdomino{
   font-size: 20px;
   font-weight: bold;
