--- a/css/domino.css
+++ b/css/domino.css
@@ -1,6 +1,9 @@
 body{
   background-image: url(../img/Domino.jpg);
   background-size: cover;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
 
   }
 
@@ -117,11 +120,17 @@ body{
   font-size-adjust: auto;
 }
 
-.startgame{
+.buttonstart{
   position: relative;
-  margin-left: 200px;
-  font-size: 20px;
+  width: 200px;
+  margin: 0 auto;
+  align-items: center;
+
+}
+.buttonstart button{
+  margin-left:30px;
   color: black;
+  font-size: 20px;
   font-variant: small-caps;
   background-color: #bf9090;
 }
@@ -140,5 +149,13 @@ body{
   font-weight: bolder;
   color: #8bca12;
 
+}
 
+.dominonumberclass img{
+  position:absolute;
+  margin-left: -10px;
+  margin-top: 0px;
+  height: 20px;
+  width: 20px;
+  background-color: white;
 }
