--- a/css/domino.css
+++ b/css/domino.css
@@ -68,8 +68,10 @@ body{
 
 .nameplayer{
   text-align: center;
-  font-size: 20px;
-  margin-bottom: 10px
+  font-size: 30px;
+  font-weight: bold;
+  font-family: fantasy;
+  margin-top: -10px
 }
 
 #dominoesplayerone, #dominoesplayertwo{
